--- a/hyperspace/blog/templates/blog/post_list.html
+++ b/hyperspace/blog/templates/blog/post_list.html
@@ -22,7 +22,7 @@
 				<nav>
 					<ul>
 						<li><a href="{% url 'index' %}">Home</a></li>
-						<li><a href="{% url 'service_list' %}" class="active">Services</a></li>
+						<li><a href="{% url 'post_list' %}" class="active">Blog</a></li>
 						
 					</ul>
 				</nav>
@@ -35,12 +35,12 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
                             <div class="features">
-                                {% for service in services%}
-								<a href="{% url  'service_detail' service.slug %}">
+                                {% for post in page_obj %}
+								<a href="{% url  'post_detail' post.slug %}">
                                 <section style="width: 100%">
-                                    <span class="{{service.icon_class}}"></span>
-                                    <h3>{{service.title}}</h3>
-                                    <p> {{service.description|truncatechars:100}}</p>
+                                    
+                                    <h3>{{post.title}}</h3>
+                                    <p> {{post.content|truncatechars:150}}</p>
                                 </section>
 							</a>
                                 {% endfor %}
@@ -50,6 +50,24 @@
 					</section>
 
 			</div>
+            
+<div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
 
 		<!-- Footer -->
 			<footer id="footer" class="wrapper alt">
